--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,14 @@ body {
   margin: 0;
 }
 
-.app{
+.app {
   display: flex;
   align-items: center;
   flex-direction: column;
-  
+
   width: 100vw;
   height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
-
 }
 .header {
   flex: 30%;
@@ -25,7 +24,7 @@ body {
   display: flex;
   flex-direction: column;
 }
-.header input{
+.header input {
   width: 200px;
   height: 40px;
   border: none;
@@ -35,7 +34,49 @@ body {
   cursor: pointer;
 }
 
-.todolist{
-flex: 70%;
-width: 100%;
+.todolist {
+  flex: 70%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding-top: 50px;
+  flex-direction: column;
+}
+
+.task{
+  width: 500px;
+  height: 50px;
+  display: flex;
+  color: white;
+  margin: 15px;
+}
+
+.task .content {
+  flex: 80%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.task .content span{
+  display: grid;
+  place-items: center;
+  border: 1px solid white ;
+  width: 100%;
+  height: 100%;
+  font-size: 18px;
+  border-right: none;
+  background-color: tomato;
+}
+
+.task button{
+  flex: 20%;
+  height: 100%;
+  border: none;
+  background-color: lightseagreen;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  color: white;
+  cursor: pointer;
 }
